<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/kotlin_android"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/spacing_15"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_25"
            android:layout_marginBottom="@dimen/spacing_25"
            android:text="@string/kotlin_fundamental"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_xl"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quiz_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:justificationMode="inter_word"
            android:text="@string/quiz_intro" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quiz_info"
            android:layout_marginTop="@dimen/spacing_15"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/start_quiz" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>